--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,7 @@ body {
     color: #00FF00;
     font-family: 'Courier New', monospace;
 }
+a {
+    color: #39b7e0 
+/*     Light Blue Color ^^^ */
+}
