--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ a:link {
 a:visited {
   color: #31a3c7;
 }
-/* mouse over link: Scooter */
+/* mouse over link: French Pass */
 a:hover {
-  color: #3dd1ff;
+  color: #c3effd;
 }
 /* selected link: Blizzard Blue */
 a:active {
