--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
 body {
-    background-color: #000;
-    color: #00FF00;
+    background-color: #373737;
+    color: #c3c3c5;
     font-family: 'Courier New', monospace;
 }
 a:link, a:visited {
-  background-color: #f44336;
+  background-color: #3d3d3d;
   color: white;
-  padding: 14px 25px;
+  padding: 15px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
 }
 
 a:hover, a:active {
-  background-color: red;
+  background-color: #353535;
 }
