--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #373737;
     color: #c3c3c5;
-    font-family: 'Courier New', monospace;
+    font-family: "Verdana", sans-serif;
 }
 a:link, a:visited {
   background-color: #3d3d3d;
