--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ body {
     color: #c3c3c5;
     font-family: "Verdana", sans-serif;
 }
+.dark-mode {
+  background-color: white;
+  color: black;
+}
 a:link, a:visited {
   background-color: #3d3d3d;
   color: white;
