--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     color: #c3c3c5;
     font-family: "Verdana", sans-serif;
 }
-.dark-mode {
+.light-mode {
   background-color: white;
   color: black;
 }
