--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 a:link, a:visited {
   background-color: #3d3d3d;
   color: white;
-  padding: 15px 25px;
+  padding: 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
