--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,16 @@ a:hover, a:active {
    text-align: center;
 }
 
+.header {
+   position: fixed;
+   left: 0;
+   top: 0;
+   width: 100%;
+   background-color: gray;
+   color: white;
+   text-align: center;
+}
+
 #indexlinks {
     overflow: auto;
 }
